2014-03-11  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/estado_monitores.php: fixed the length of module
	name in the agent view.
	
	Incident: #608

2014-03-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: fixed images of static graphs.
	
	Incident: #571

2014-03-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components_form.php: fixed the
	fields for wmi that was disabled.
	
	Incident: #637
	
	* godmode/modules/manage_network_components_form_common.php,
	godmode/modules/manage_network_components_form_wmi.php: 

2014-03-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/graphs/flot/pandora.flot.js: fixed the position of buttons
	in the flot area graphs when the graphs are in other pages than
	stat win.
	
	Incident: #560
	
	* operation/agentes/graphs.php, include/graphs/fgraph.php,
	include/graphs/functions_flot.php: cleaned source code style.

2014-03-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/pandora_snmp_browser.js,
	include/functions_snmp_browser.php: cleaned source code style.
	
	* godmode/agentes/module_manager_editor_network.php: fixed the
	javascript include for policies.
	
	Incident: #616

2014-03-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

        * include/functions_reporting.php: sla reports with sla
        completion equal to 100 are ok, not "inside limits".

2014-03-09  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_ipam.php: Added japanese ipam help file.

2014-03-07  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/status_monitor.php,
	operation/agentes/estado_monitores.php: added the snapshot feature
	in the view of monitors.

2014-03-06  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php,
	operation/visual_console/render_view.php: cleaned source code style.
	
	* include/functions_reporting.php: fixed the legend for the graphs
	into the topn element report.
	